# selenium

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: setup
src/auto_message/: chrome.py  configs.py  samples
